--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
 <body>
   <div id="mobile-menu-open" class="shadow-large">
     <i class="fa fa-bars" aria-hidden="true"></i>
-  </div>
+  </div> 
   
 
   <div>
@@ -29,6 +29,6 @@
     
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-<script src="./assets/js/scripts.min.js"></script>
+<script src="./assets/js/scripts.js"></script>
 </body>
 </html>
